# libsmaf

./: CMakeLists.txt  ExportDecompiledFunctions.java  ExportGMVoices.java  ExportROMData.java  PROGRESS.md  README.md  build.sh  ghidra_export_all_functions.py  ghidra_export_headless.py  libsmaf日志.txt  run_ghidra_export.bat  run_ghidra_gmvoices.bat  run_ghidra_rom_export.bat  smaf_play.sh  smaf_play64.sh
docs/: FMFM_MA5_ANALYSIS.md  GHIDRA_HEADLESS_GUIDE.md  GHIDRA_PE_ANALYSIS.md  LIBSMAF_PHASE1_DESIGN.md  MA7_CORE_ANALYSIS.md  MMF_PLAYBACK_FLOW.md  README.md  SMAF_INVESTIGATION.md  SMAF_LIBRARIES_ANALYSIS.md  YAMAHA_DLLS_ANALYSIS.md  YMU762_MIDI_ANALYSIS.md
docs/ghidra_ma7_arm32/: ATRTMIDIMgr_DelEffectParam.c  ATRTMIDIMgr_DelFmParam.c  ATRTMIDIMgr_DelHVParam.c  ATRTMIDIMgr_DelHVScript.c  ATRTMIDIMgr_DelStreamParam.c  ATRTMIDIMgr_DelVoiceParam.c  ATRTMIDIMgr_DelWaveParam.c  ATRTMIDIMgr_Init.c  ATRTMIDIMgr_SetEffectParam.c  ATRTMIDIMgr_SetFmParam.c  ATRTMIDIMgr_SetHVChannel.c  ATRTMIDIMgr_SetHVParam.c  ATRTMIDIMgr_SetHVScript.c  ATRTMIDIMgr_SetStreamPan.c  ATRTMIDIMgr_SetStreamParam.c  ATRTMIDIMgr_SetVoiceParam.c  ATRTMIDIMgr_SetWaveParam.c  ATRTMIDIMgr_Term.c  AfxBeginThread.c  AfxEndThread.c  AfxGetEmptyString.c  AllocBeforeWrite.c  AllocBuffer.c  AssignCopy.c  CBInfo_FreeCallback.c  CBInfo_GetHookFunc.c  CBInfo_Initialize.c  CBInfo_Procedure.c  CBInfo_SetCallback.c  CBInfo_Terminate.c  CCh.c  CCsmSynth.c  CDinSynth.c  CDsp.c  CDsp1.c  CDsp2.c  CDtmfSynth.c  CFmSynth.c  CLpf.c  CM7_EmuSmw7App.c  (+1169 more)
docs/ghidra_ma7_arm64/: ATRTMIDIMgr_DelEffectParam.c  ATRTMIDIMgr_DelFmParam.c  ATRTMIDIMgr_DelHVParam.c  ATRTMIDIMgr_DelHVScript.c  ATRTMIDIMgr_DelStreamParam.c  ATRTMIDIMgr_DelVoiceParam.c  ATRTMIDIMgr_DelWaveParam.c  ATRTMIDIMgr_Init.c  ATRTMIDIMgr_SetEffectParam.c  ATRTMIDIMgr_SetFmParam.c  ATRTMIDIMgr_SetHVChannel.c  ATRTMIDIMgr_SetHVParam.c  ATRTMIDIMgr_SetHVScript.c  ATRTMIDIMgr_SetStreamPan.c  ATRTMIDIMgr_SetStreamParam.c  ATRTMIDIMgr_SetVoiceParam.c  ATRTMIDIMgr_SetWaveParam.c  ATRTMIDIMgr_Term.c  AfxBeginThread.c  AfxEndThread.c  AfxGetEmptyString.c  AllocBeforeWrite.c  AllocBuffer.c  AssignCopy.c  CBInfo_FreeCallback.c  CBInfo_GetHookFunc.c  CBInfo_Initialize.c  CBInfo_Procedure.c  CBInfo_SetCallback.c  CBInfo_Terminate.c  CCh.c  CCsmSynth.c  CDinSynth.c  CDsp.c  CDsp1.c  CDsp2.c  CDtmfSynth.c  CFmSynth.c  CLpf.c  CM7_EmuSmw7App.c  (+1175 more)
docs/ma7_rom_data_ghidra/: csm_area_48000.h  csm_aux_48000.h  csm_wave_48000.h  fm_default_al_fl.h  fm_pitch_table.h  fm_wave_11025_t0.h  fm_wave_11025_t1.h  fm_wave_11025_t2.h  fm_wave_16000_t0.h  fm_wave_16000_t1.h  fm_wave_16000_t2.h  fm_wave_22050_t0.h  fm_wave_22050_t1.h  fm_wave_22050_t2.h  fm_wave_24000_t0.h  fm_wave_24000_t1.h  fm_wave_24000_t2.h  fm_wave_32000_t0.h  fm_wave_32000_t1.h  fm_wave_32000_t2.h  fm_wave_44100_t0.h  fm_wave_44100_t1.h  fm_wave_44100_t2.h  fm_wave_48000_t0.h  fm_wave_48000_t1.h  fm_wave_48000_t2.h  lfo_sine_4096.h  rom_wave_source.h  wt_log2_table.h  wt_period_table1.h  wt_period_table2.h  wt_wave_48000_t0.h  wt_wave_48000_t1.h  wt_wave_48000_t2.h  wt_wave_48000_t3.h  wt_wave_number_lut.h
include/: smaf.h
mmfs/: SILENT.MMF
reference_voices/: DefMA3_16.vm3  DefMA3_16U.vm3  DefMA3_32.vm3  DefMA3_32U.vm3  DefMA5_16.vm5  DefMA5_16U.vm5  DefMA5_32.vm5  DefMA5_32U.vm5
reference_voices/mmf_samples/: AnalogKit.mmf  BrushKit.mmf  ChineseDrum1.mmf  ChineseDrum10.mmf  ChineseDrum2.mmf  ChineseDrum3.mmf  ChineseDrum4.mmf  ChineseDrum5.mmf  ChineseDrum6.mmf  ChineseDrum7.mmf  ChineseDrum8.mmf  ChineseDrum9.mmf  Classic_MA3.mmf  CoolGuitar.mmf  Dance_MA3.mmf  Dizi.mmf  ElectricKit.mmf  Erhu.mmf  FunkyGuitar.mmf  Fusion_MA3.mmf  JapaneseDrum1.mmf  JapaneseDrum2.mmf  JapaneseDrum3.mmf  JapaneseDrum4.mmf  JazzKit.mmf  Latin_MA3.mmf  MusicBox_MA3.mmf  OrchestraKit.mmf  PercussiveBell.mmf  Pipa.mmf  PowerKit.mmf  Standard2Kit.mmf  Suona.mmf  Yangqin.mmf  Zheng.mmf
reference_voices/sm3/: ChineseDrum1.sm3  ChineseDrum10.sm3  ChineseDrum2.sm3  ChineseDrum3.sm3  ChineseDrum4.sm3  ChineseDrum5.sm3  ChineseDrum6.sm3  ChineseDrum7.sm3  ChineseDrum8.sm3  ChineseDrum9.sm3  Dizi.sm3  Erhu.sm3  JapaneseDrum1.sm3  JapaneseDrum2.sm3  JapaneseDrum3.sm3  JapaneseDrum4.sm3  PercussiveBell.sm3  Pipa.sm3  Suona.sm3  Yangqin.sm3  Zheng.sm3
reference_voices/spf/: 1sCount1.spf  1sCount2.spf  Cancel1D.spf  Cancel2D.spf  Cancel3D.spf  Cancel4D.spf  Cancel5D.spf  Change1D.spf  Change2D.spf  Change3D.spf  Change4D.spf  Change5.spf  Click03.spf  Click04D.spf  Click05D.spf  Click06D.spf  Click07.spf  Click08.spf  Click09.spf  FootSt1L.spf  FootSt1R.spf  FootSt2L.spf  FootSt2R.spf  FootSt3R.spf  FootSt4L.spf  FootSt4R.spf  Good01D.spf  Good02D.spf  (+38 more)
src/: smaf.c  smaf_common.h
test/: test_debug.c  test_eg_trace.c  test_fm.c  test_parser.c  test_play.c
(+2918 files in other folders)
